--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 11/14/2019
-  ms.openlocfilehash: f0ce469a57eb36d53769272feaff1b124c2a77ff
-  ms.sourcegitcommit: f77b24a8a588605f005c9bb1fdad864955885718
+  ms.openlocfilehash: e95a60b0927592bfac06f05f84158449803f421b
+  ms.sourcegitcommit: e492895259aa39960063f9b337a144a60c20125a
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 12/02/2019
-  ms.locfileid: "74695233"
+  ms.lasthandoff: 12/05/2019
+  ms.locfileid: "74830714"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -59,3 +59,11 @@ landingContent:
     links:
     - text: Melhores práticas de fluxos de dados
       url: ../service-dataflows-best-practices.md
+- title: Relatórios
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Estender visuais com dicas de ferramentas de página de relatório
+      url: report-page-tooltips.md
+    - text: Detalhamento de página de relatório
+      url: report-drillthrough.md
