--- a/powerbi-docs/guidance/TOC.yml
+++ b/powerbi-docs/guidance/TOC.yml
@@ -32,10 +32,14 @@
           href: ../service-dataflows-best-practices.md
         - name: Diretrizes sobre modelos de DirectQuery no Power BI Desktop
           href: directquery-model-guidance.md
+        - name: Referenciar consultas do Power Query
+          href: power-query-referenced-queries.md
         - name: Estender visuais com dicas de ferramentas de página de relatório
           href: report-page-tooltips.md
         - name: Detalhamento de página de relatório
           href: report-drillthrough.md
+        - name: Diretrizes de data/hora automática no Power BI Desktop
+          href: auto-date-time.md
     - name: White papers
       items:
         - name: Visão geral dos white papers
