--- a/powerbi-docs/developer/TOC.yml
+++ b/powerbi-docs/developer/TOC.yml
@@ -83,8 +83,22 @@
               href: visuals/event-service.md
             - name: Classificação
               href: visuals/sort-options.md
-            - name: Utilitários de interatividade
-              href: visuals/utils-interactivity-selections.md
+            - name: Localização
+              href: visuals/localization.md
+            - name: Utilitários visuais do Power BI
+              items:
+                - name: Utilitários de interatividade
+                  href: visuals/utils-interactivity-selections.md
+                - name: Utilitários de formatação
+                  href: visuals/utils-formatting.md
+                - name: Utilitários de gráfico
+                  href: visuals/utils-chart.md
+                - name: Utilitários de SVG
+                  href: visuals/utils-svg.md
+                - name: Utilitários de tipo
+                  href: visuals/utils-type.md
+                - name: Utilitários de exibição de dados
+                  href: visuals/utils-dataview.md
         - name: Recursos
           items:
             - name: Centro de Desenvolvimento
