--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 11/14/2019
-  ms.openlocfilehash: c99ca86bc619fbb13a6f1c48ecf96d18c4a91188
-  ms.sourcegitcommit: 4359baa43ca01b179d28ec59f4e61ba8c07ee288
+  ms.openlocfilehash: 7fe5b29b891f2eeac49f2fac357c4f643362785d
+  ms.sourcegitcommit: ef9ab7c0d84b926094c33e8aa2765cd43b844314
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 12/20/2019
-  ms.locfileid: "75304103"
+  ms.lasthandoff: 01/03/2020
+  ms.locfileid: "75622224"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -43,6 +43,8 @@ landingContent:
       url: auto-date-time.md
     - text: Diretrizes de relação muitos para muitos
       url: relationships-many-to-many.md
+    - text: Desabilitar atualização em segundo plano do Power Query
+      url: power-query-background-refresh.md
 - title: DAX
   linkLists:
   - linkListType: concept
@@ -59,6 +61,8 @@ landingContent:
       url: dax-variables.md
     - text: Evite converter BLANKs em valores
       url: dax-avoid-converting-blank.md
+    - text: Referências de coluna e de medida
+      url: dax-column-measure-references.md
 - title: Fluxos de dados
   linkLists:
   - linkListType: concept
