--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 11/14/2019
-  ms.openlocfilehash: 7fe5b29b891f2eeac49f2fac357c4f643362785d
-  ms.sourcegitcommit: ef9ab7c0d84b926094c33e8aa2765cd43b844314
+  ms.openlocfilehash: 685c4d885d6658b2f0d6eace63882e453cfb77a2
+  ms.sourcegitcommit: b09de56e971b8844a3771413d1f56d49b31baaaf
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 01/03/2020
-  ms.locfileid: "75622224"
+  ms.lasthandoff: 01/07/2020
+  ms.locfileid: "75691300"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -63,6 +63,8 @@ landingContent:
       url: dax-avoid-converting-blank.md
     - text: Referências de coluna e de medida
       url: dax-column-measure-references.md
+    - text: Evite usar FILTER como argumento de filtro
+      url: dax-avoid-avoid-filter-as-filter-argument.md
 - title: Fluxos de dados
   linkLists:
   - linkListType: concept
