commit translated contents

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -709,6 +709,8 @@
               href: service-dataflows-overview.md
             - name: Criar e usar fluxos de dados
               href: service-dataflows-create-use.md
+            - name: Usar o mecanismo de computação aprimorado com fluxos de dados
+              href: service-dataflows-enhanced-compute-engine.md
             - name: Entidades computadas com o Power BI Premium
               href: service-dataflows-computed-entities-premium.md
             - name: Conectar-se a fontes de dados com fluxos de dados
@@ -801,6 +803,8 @@
               items:
                 - name: Conectar-se a serviços com aplicativos
                   href: service-connect-to-services.md
+                - name: Calculadora de Carbono do Azure
+                  href: service-connect-to-azure-carbon-calculator.md
                 - name: GitHub
                   href: service-connect-to-github.md
                 - name: Office365Mon
