--- a/powerbi-docs/developer/TOC.yml
+++ b/powerbi-docs/developer/TOC.yml
@@ -25,7 +25,7 @@
           items:
             - name: Estrutura do projeto do visual do Power BI
               href: visuals/visual-project-structure.md
-            - name: Conceito visual
+            - name: Conceitos visuais
               href: visuals/power-bi-visuals-concept.md
             - name: Visuais para organizações no Power BI
               href: power-bi-custom-visuals-organization.md
