--- a/powerbi-docs/guidance/TOC.yml
+++ b/powerbi-docs/guidance/TOC.yml
@@ -10,48 +10,56 @@
     - name: Conceitos
       expanded: true
       items:
-        - name: O que é um esquema em estrela?
-          href: star-schema.md
-        - name: Reduzir o tamanho do modelo de dados
-          href: import-modeling-data-reduction.md
-        - name: Função DIVIDE versus operador dividir (/)
-          href: dax-divide-function-operator.md
-        - name: Usar SELECTEDVALUE em vez de VALUES
-          href: dax-selectedvalue.md
-        - name: A importância da dobragem de consultas
-          href: power-query-folding.md
-        - name: Uso apropriado de funções de erro
-          href: dax-error-functions.md
-        - name: Usar variáveis para melhorar fórmulas
-          href: dax-variables.md
-        - name: COUNTROWS em vez de COUNT
-          href: dax-countrows.md
-        - name: Evite converter BLANKs em valores
-          href: dax-avoid-converting-blank.md
-        - name: Referências de coluna e de medida
-          href: dax-column-measure-references.md
-        - name: Evite usar FILTER como argumento de filtro
-          href: dax-avoid-avoid-filter-as-filter-argument.md
-        - name: Práticas recomendadas para fluxos de dados
-          href: ../service-dataflows-best-practices.md
-        - name: Diretrizes sobre modelos de DirectQuery no Power BI Desktop
-          href: directquery-model-guidance.md
-        - name: Referenciar consultas do Power Query
-          href: power-query-referenced-queries.md
-        - name: Estender visuais com dicas de ferramentas de página de relatório
-          href: report-page-tooltips.md
-        - name: Detalhamento de página de relatório
-          href: report-drillthrough.md
-        - name: Diretrizes de data/hora automática no Power BI Desktop
-          href: auto-date-time.md
-        - name: Diretrizes de relação muitos para muitos
-          href: relationships-many-to-many.md
-        - name: Desabilitar atualização em segundo plano do Power Query
-          href: power-query-background-refresh.md
-        - name: Quando usar relatórios paginados no Power BI
-          href: report-paginated-or-power-bi.md
-        - name: Migrar relatórios do SQL Server Reporting Services para o Power BI
-          href: migrate-ssrs-reports-to-power-bi.md
+        - name: Transformar e formatar dados
+          items:
+            - name: A importância da dobragem de consultas
+              href: power-query-folding.md
+            - name: Referenciar consultas do Power Query
+              href: power-query-referenced-queries.md
+            - name: Desabilitar atualização em segundo plano do Power Query
+              href: power-query-background-refresh.md
+            - name: Práticas recomendadas para fluxos de dados
+              href: ../service-dataflows-best-practices.md
+        - name: Modelagem de dados
+          items:
+            - name: O que é um esquema em estrela?
+              href: star-schema.md
+            - name: Reduzir o tamanho do modelo de dados
+              href: import-modeling-data-reduction.md
+            - name: Diretrizes de data/hora automática no Power BI Desktop
+              href: auto-date-time.md
+            - name: Diretrizes de relação muitos para muitos
+              href: relationships-many-to-many.md
+            - name: Diretrizes sobre modelos de DirectQuery no Power BI Desktop
+              href: directquery-model-guidance.md
+        - name: DAX
+          items:
+            - name: Função DIVIDE versus operador dividir (/)
+              href: dax-divide-function-operator.md
+            - name: Uso apropriado de funções de erro
+              href: dax-error-functions.md
+            - name: Usar SELECTEDVALUE em vez de VALUES
+              href: dax-selectedvalue.md
+            - name: COUNTROWS em vez de COUNT
+              href: dax-countrows.md
+            - name: Usar variáveis para melhorar fórmulas
+              href: dax-variables.md
+            - name: Evite converter BLANKs em valores
+              href: dax-avoid-converting-blank.md
+            - name: Referências de coluna e de medida
+              href: dax-column-measure-references.md
+            - name: Evite usar FILTER como argumento de filtro
+              href: dax-avoid-avoid-filter-as-filter-argument.md
+        - name: Criação de relatório
+          items:
+            - name: Estender visuais com dicas de ferramentas de página de relatório
+              href: report-page-tooltips.md
+            - name: Detalhamento de página de relatório
+              href: report-drillthrough.md
+            - name: Quando usar relatórios paginados no Power BI
+              href: report-paginated-or-power-bi.md
+            - name: Migrar relatórios do SQL Server Reporting Services para o Power BI
+              href: migrate-ssrs-reports-to-power-bi.md
     - name: White papers
       items:
         - name: Visão geral dos white papers
