--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: maggiesMSFT
   ms.author: maggies
-  ms.date: 11/14/2019
-  ms.openlocfilehash: 2d34b41ec7ebc473c84bbfffccfa555cda817e3a
-  ms.sourcegitcommit: 801d2baa944469a5b79cf591eb8afd18ca4e00b1
+  ms.date: 01/14/2020
+  ms.openlocfilehash: 091fbef4ce3a3cc1e5e3c0d0e4f26a25598f2556
+  ms.sourcegitcommit: df8bcc65f0df69bf1fc1d47eb06575742eac1622
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 01/11/2020
-  ms.locfileid: "75885159"
+  ms.lasthandoff: 01/15/2020
+  ms.locfileid: "75953705"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -27,6 +27,18 @@ landingContent:
       url: overview.md
     - text: Visão geral dos white papers
       url: ../whitepapers.md
+- title: Transformar e formatar dados
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: A importância da dobragem de consultas
+      url: power-query-folding.md
+    - text: Desabilitar atualização em segundo plano do Power Query
+      url: power-query-background-refresh.md
+    - text: Referenciar consultas do Power Query
+      url: power-query-referenced-queries.md
+    - text: Melhores práticas de fluxos de dados
+      url: ../service-dataflows-best-practices.md
 - title: Modelagem de dados
   linkLists:
   - linkListType: concept
@@ -35,16 +47,10 @@ landingContent:
       url: star-schema.md
     - text: Técnicas de redução de dados
       url: import-modeling-data-reduction.md
-    - text: A importância da dobragem de consultas
-      url: power-query-folding.md
-    - text: Referenciar consultas do Power Query
-      url: power-query-referenced-queries.md
     - text: Diretrizes de data/hora automática no Power BI Desktop
       url: auto-date-time.md
     - text: Diretrizes de relação muitos para muitos
       url: relationships-many-to-many.md
-    - text: Desabilitar atualização em segundo plano do Power Query
-      url: power-query-background-refresh.md
 - title: DAX
   linkLists:
   - linkListType: concept
@@ -65,13 +71,7 @@ landingContent:
       url: dax-column-measure-references.md
     - text: Evite usar FILTER como argumento de filtro
       url: dax-avoid-avoid-filter-as-filter-argument.md
-- title: Fluxos de dados
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: Melhores práticas de fluxos de dados
-      url: ../service-dataflows-best-practices.md
-- title: Relatórios
+- title: Criação de relatório
   linkLists:
   - linkListType: concept
     links:
