--- a/powerbi-docs/guidance/TOC.yml
+++ b/powerbi-docs/guidance/TOC.yml
@@ -54,10 +54,12 @@
           items:
             - name: Estender visuais com dicas de ferramentas de página de relatório
               href: report-page-tooltips.md
-            - name: Detalhamento de página de relatório
+            - name: Usar o detalhamento de página de relatório
               href: report-drillthrough.md
             - name: Quando usar relatórios paginados no Power BI
               href: report-paginated-or-power-bi.md
+            - name: Evitar páginas em branco ao imprimir relatórios paginados
+              href: report-paginated-blank-page.md
             - name: Migrar relatórios do SQL Server Reporting Services para o Power BI
               href: migrate-ssrs-reports-to-power-bi.md
     - name: White papers
