--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 01/14/2020
-  ms.openlocfilehash: 091fbef4ce3a3cc1e5e3c0d0e4f26a25598f2556
-  ms.sourcegitcommit: df8bcc65f0df69bf1fc1d47eb06575742eac1622
+  ms.openlocfilehash: 2bebde937666503739f6b0afe3ce20a8fe4baa8c
+  ms.sourcegitcommit: 0ae9328e7b35799d5d9613a6d79d2f86f53d9ab0
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 01/15/2020
-  ms.locfileid: "75953705"
+  ms.lasthandoff: 01/16/2020
+  ms.locfileid: "76039895"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -77,9 +77,11 @@ landingContent:
     links:
     - text: Estender visuais com dicas de ferramentas de página de relatório
       url: report-page-tooltips.md
-    - text: Detalhamento de página de relatório
+    - text: Usar o detalhamento de página de relatório
       url: report-drillthrough.md
     - text: Quando usar relatórios paginados no Power BI
       url: report-paginated-or-power-bi.md
+    - text: Evitar páginas em branco ao imprimir relatórios paginados
+      url: report-paginated-blank-page.md
     - text: Migrar relatórios do SQL Server Reporting Services para o Power BI
       url: migrate-ssrs-reports-to-power-bi.md
