--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -4,7 +4,7 @@
       items:
         - name: O que é o Power BI Desktop?
           href: desktop-what-is-desktop.md
-    - name: Inícios rápidos
+    - name: Início rápido
       expanded: true
       items:
         - name: Conectar-se a dados no Power BI Desktop
@@ -101,7 +101,7 @@
           href: desktop-relationship-view.md
         - name: Trabalhar com a Exibição de relatório
           href: desktop-report-view.md
-        - name: Conectar-se às fontes de dados
+        - name: Conectar-se a fontes de dados
           href: desktop-connect-to-data.md
         - name: Publicar conjuntos de dados e relatórios
           href: desktop-upload-desktop-files.md
@@ -117,7 +117,7 @@
           href: desktop-auto-date-time.md
         - name: Conectar aos dados
           items:
-            - name: Conectar-se às fontes de dados
+            - name: Conectar-se a fontes de dados
               href: desktop-data-sources.md
             - name: Criar um relatório em uma Lista do SharePoint
               href: desktop-sharepoint-online-list.md
@@ -145,7 +145,7 @@
               href: desktop-python-ide.md
             - name: Criar visuais com o Python
               href: desktop-python-visuals.md
-            - name: Executar scripts de R
+            - name: Executar scripts do R
               href: desktop-r-scripts.md
             - name: Uso do R no Editor de Consultas
               href: desktop-r-in-query-editor.md
@@ -481,7 +481,7 @@
               href: service-datasets-understand.md
             - name: Entender os modos de conjuntos de dados do Power BI
               href: service-dataset-modes-understand.md
-            - name: Atualização de dados no Power BI
+            - name: Atualizar dados no Power BI
               href: refresh-data.md
         - name: Colaborar no Power BI
           items:
@@ -491,7 +491,7 @@
               href: service-how-to-collaborate-distribute-dashboards-reports.md
             - name: Monitorar o uso do Power BI
               href: service-usage-metrics.md
-        - name: Licenciamento
+        - name: Licenças
           items:
             - name: Inscrever-se no Power BI
               href: service-self-service-signup-for-power-bi.md
@@ -585,7 +585,7 @@
               href: refresh-csv-file-onedrive.md
             - name: Cache de consulta no Power BI Premium
               href: power-bi-query-caching.md
-        - name: Painéis
+        - name: Dashboards
           items:
             - name: Introdução aos painéis
               href: service-dashboards.md
@@ -605,7 +605,7 @@
               href: service-dashboard-pin-tile-from-q-and-a.md
             - name: Fixar uma página inteira do relatório em um dashboard
               href: service-dashboard-pin-live-tile-from-report.md
-            - name: Alertas de dados no Serviço do Power BI
+            - name: Alertas de dados no serviço do Power BI
               href: service-set-data-alerts.md
             - name: 'Adicionar uma imagem, uma caixa de texto, um vídeo ou um código a um dashboard'
               href: service-dashboard-add-widget.md
@@ -731,7 +731,7 @@
               href: service-dataflows-azure-data-lake-integration.md
             - name: Conectar-se ao Azure Data Lake Storage Gen2 para armazenamento de fluxo de dados
               href: service-dataflows-connect-azure-data-lake-storage-gen2.md
-            - name: Definir configurações de fluxo de dados de workspace (visualização)
+            - name: Definir configurações de fluxo de dados de workspace (versão prévia)
               href: service-dataflows-configure-workspace-storage-settings.md
             - name: Adicionar uma pasta do CDM ao Power BI como um fluxo de dados (versão prévia)
               href: service-dataflows-add-cdm-folder.md
@@ -801,7 +801,7 @@
               href: service-govus-signup.md
             - name: Excluir quase tudo no Power BI
               href: service-delete.md
-            - name: Conectar-se a serviços
+            - name: Conectar aos serviços
               items:
                 - name: Conectar-se a serviços com aplicativos
                   href: service-connect-to-services.md
@@ -811,7 +811,7 @@
                   href: service-connect-to-microsoft-sustainability-calculator.md
                 - name: Office365Mon
                   href: service-connect-to-office365mon.md
-                - name: Project Online
+                - name: Projeto Online
                   href: service-connect-to-project-online.md
                 - name: QuickBooks Online
                   href: service-connect-to-quickbooks-online.md
@@ -839,11 +839,11 @@
       items:
         - name: Idiomas e países/regiões compatíveis
           href: supported-languages-countries-regions.md
-        - name: Navegadores com suporte
+        - name: Navegadores incompatíveis
           href: power-bi-browsers.md
     - name: Recursos
       items:
-        - name: vídeos
+        - name: Vídeos
           href: videos.md
         - name: Webinars
           href: webinars.md
@@ -917,7 +917,7 @@
           href: report-builder-design-tips.md
         - name: 'Tabelas, matrizes, listas'
           href: report-builder-tables-matrices-lists.md
-        - name: parâmetros
+        - name: Parâmetros
           href: report-builder-parameters.md
         - name: URL parameters in paginated reports (Parâmetros de URL em relatórios paginados)
           href: report-builder-url-parameters.md
@@ -961,16 +961,18 @@
       items:
         - name: Novidades
           href: report-server/whats-new.md
+        - name: Visão geral do administrador
+          href: report-server/admin-handbook-overview.md
         - name: Log de alterações
           href: report-server/changelog.md
         - name: Linha do tempo de suporte
           href: report-server/support-timeline.md
+        - name: Suporte do Always Encrypted
+          href: report-server/always-encrypted-support.md
         - name: Requisitos de hardware e software
           href: report-server/system-requirements.md
         - name: Suporte ao navegador
           href: report-server/browser-support.md
-        - name: Visão geral do administrador
-          href: report-server/admin-handbook-overview.md
         - name: Noções básicas sobre o servidor de relatórios
           items:
             - name: Atualização agendada do relatório do Power BI
@@ -1071,7 +1073,7 @@
       items:
         - name: Diretrizes para implantar um gateway de dados
           href: service-gateway-deployment-guidance.md
-        - name: Perguntas frequentes de gateway de dados no local
+        - name: Perguntas frequentes sobre o gateway de dados local
           href: service-gateway-power-bi-faq.md
     - name: Como
       items:
@@ -1079,9 +1081,9 @@
           href: service-gateway-onprem-indepth.md
         - name: Gateway de dados local (modo pessoal)
           href: service-gateway-personal-mode.md
-        - name: Gerenciar as fontes de dados
+        - name: Gerenciar fontes de dados
           items:
-            - name: Gerenciar as fontes de dados
+            - name: Gerenciar fontes de dados
               href: service-gateway-data-sources.md
             - name: Gerenciar sua fonte de dados corporativa - Analysis Services
               href: service-gateway-enterprise-manage-ssas.md
