--- a/powerbi-docs/guidance/TOC.yml
+++ b/powerbi-docs/guidance/TOC.yml
@@ -32,6 +32,8 @@
               href: relationships-many-to-many.md
             - name: Diretriz do modelo DirectQuery
               href: directquery-model-guidance.md
+            - name: Diretriz do modelo composto
+              href: composite-model-guidance.md
         - name: DAX
           items:
             - name: Função DIVIDE versus operador dividir (/)
@@ -50,8 +52,6 @@
               href: dax-column-measure-references.md
             - name: Evite usar FILTER como argumento de filtro
               href: dax-avoid-avoid-filter-as-filter-argument.md
-        - name: Criação de relatório
-          items:
             - name: Estender visuais com dicas de ferramentas de página de relatório
               href: report-page-tooltips.md
             - name: Usar o detalhamento de página de relatório
@@ -64,6 +64,10 @@
               href: report-paginated-blank-page.md
             - name: Migrar relatórios SSRS para o Power BI
               href: migrate-ssrs-reports-to-power-bi.md
+        - name: Administração e implantação
+          items:
+            - name: Dimensionamento de gateway de dados local
+              href: gateway-onprem-sizing.md
     - name: White papers
       items:
         - name: Visão geral dos white papers
