--- a/powerbi-docs/guidance/index.yml
+++ b/powerbi-docs/guidance/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: maggiesMSFT
   ms.author: maggies
   ms.date: 01/14/2020
-  ms.openlocfilehash: 4f9d90caa643771ee300a9e7a62b4eb819becc82
-  ms.sourcegitcommit: 3d6b27e3936e451339d8c11e9af1a72c725a5668
+  ms.openlocfilehash: e3c842b40f0919ccbda823930bcb0a3f212d67cc
+  ms.sourcegitcommit: 8b300151b5c59bc66bfef1ca2ad08593d4d05d6a
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 01/17/2020
-  ms.locfileid: "76161445"
+  ms.lasthandoff: 01/30/2020
+  ms.locfileid: "76888651"
 landingContent:
 - title: Diretrizes do Power BI
   linkLists:
@@ -51,6 +51,8 @@ landingContent:
       url: auto-date-time.md
     - text: Diretriz do modelo DirectQuery
       url: directquery-model-guidance.md
+    - text: Diretriz do modelo composto
+      url: composite-model-guidance.md
     - text: Diretrizes de relação muitos para muitos
       url: relationships-many-to-many.md
 - title: DAX
@@ -89,3 +91,9 @@ landingContent:
       url: report-paginated-blank-page.md
     - text: Migrar relatórios SSRS para o Power BI
       url: migrate-ssrs-reports-to-power-bi.md
+- title: Administração e implantação
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: Dimensionamento de gateway de dados local
+      url: gateway-onprem-sizing.md
