commit translated contents

--- a/powerbi-docs/consumer/TOC.yml
+++ b/powerbi-docs/consumer/TOC.yml
@@ -13,7 +13,7 @@
         - name: Navegar pela 'nova aparência'
           href: ../service-new-look.md
         - name: 'A “nova aparência”: aonde foram as ações?'
-          href: ../service-new-look.md
+          href: ../service-new-look-where-actions.md
     - name: Início rápido
       items:
         - name: Encontre seu caminho no Power BI
